fixed css overlap bug

--- a/frontend/src/components/Calendar.module.css
+++ b/frontend/src/components/Calendar.module.css
@@ -11,5 +11,6 @@
 }
 
 .calendarViewEntries {
-    padding-right: 10%;
+    padding-right: 5%;
+    height: 500px;
 }
