--- a/frontend/src/pages/Profile/Profile.module.css
+++ b/frontend/src/pages/Profile/Profile.module.css
@@ -1,8 +1,10 @@
 .userInformation {
-    justify-content: 'center';
+    justify-content: center;
     width: 50%;
 }
 
 .userEntriesContainer {
-    width: 55%;
+    width: 60%;
 }
+
+.tripsButtonContainer {}
